--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
       <h3 style="text-align: center"> How to interpret the eigenvalue plot: </h2>
       <small>
       <p style="text-align: left;padding: 1em"> "Eigenvalues" tell us how the system responds to its own stored energy.
-        In a spring-mass oscillator, the "eigenvalues" give us the vibration frequency of the system.
+        In a spring-mass oscillator, the eigenvalues give us the vibration frequency of the system.
         For a system that has exponential behavior, like a turkey heating in the oven, the eigvenvalues tell us how fast the system reaches its steady state.
         In general, systems can have a combination "real" eigenvalues, which represent exponential growth (if the eigenvalue is greater than 0) or decay (if the eigenvalue is less than 0), or "complex" eigenvalues with an imaginary part, which indicate that the system will oscillate.
         The frequency of oscillations in the system is dictated by how large the imaginary parts of any complex eigenvalues are. A larger complex part means fast oscillation.
-        For real eigenvalues or parts of complex eigenvalues, a large negative number means faster decay. Any positive real part of any eigenvalue means that the system is unstable. For the motorcycle, this means the bike will fall over.
-        When all of the four eigenvalues in our motorcycle model have negative real parts, it means the bike can stay upright by itself without a rider (think hands-free riding).
+        For real eigenvalues or parts of complex eigenvalues, a large negative number means faster decay. Any positive real part of any eigenvalue means that the system is unstable. For our model, which does not capture any active "corrective" control inputs from a rider, any positive eigenvalue in the plot above means the bike will fall over.
+        When all of the four eigenvalues in our motorcycle model have negative real parts, it means the bike can stay upright by itself without a rider (think hands-free riding). You might be surprised that the bike is only "self-stable" at "medium" speeds-- at higher speeds, the gyroscopic effects from the spinning wheels mean that the handlebars self-center too much, and the bike does not automatically steer into a lean. That is totally ok in practice, because a rider would gently but actively steer to stabilize the bike. In fact, riders do this without even being aware of it! Even with hands off of the handlebars at higher speeds, subtle weight shifts are more than enough to keep the bike upright.
       </p>
     </small>
     </div>
